--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "version": "1.0.0",
   "description": "JavaScript development environment Pluralsight course by Cory House",
   "scripts": {
+    "prestart": "babel-node buildScripts/startMessage.js",
+    "start":"node buildScripts/srcServer.js",
+    "security-check":"nsp check",
+    "localtunnel":"lt --port 3000"
+
   },
   "author": "Mohit Singh",
   "license": "MIT",
