--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "JavaScript development environment Pluralsight course by Cory House",
   "scripts": {
     "prestart": "babel-node buildScripts/startMessage.js",
-    "start":"node buildScripts/srcServer.js",
+    "start":"babel-node buildScripts/srcServer.js",
     "security-check":"nsp check",
     "localtunnel":"lt --port 3000"
 
