--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
     "prestart": "babel-node buildScripts/startMessage.js",
     "start":"babel-node buildScripts/srcServer.js",
     "security-check":"nsp check",
-    "localtunnel":"lt --port 3000"
-
+    "localtunnel":"lt --port 3000",
+    "lint":"esw webpack.config.* src buildScripts",
+    "lint:watch":"npm run lint -- --watch"
   },
   "author": "Mohit Singh",
   "license": "MIT",
